--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,19 @@ p {
   z-index: -1;
 }
 .container {
+   margin: 2rem auto;
+  max-width: 500px;
+  width: 90%;
+  min-height: 70vh;
+  padding: 2rem;
+  border-radius: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 2;
   position: relative;
+  overflow: hidden;
   background: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.15);
   border-radius: 20px;
