--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,8 @@ body {
 /* Container Shared Styles */
 .container {
   margin-top: 6rem;
-  margin: 2rem auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 500px;
   width: 90%;
   min-height: 70vh;
